Add script to combine multiple CSV files into a single DataFrame and save as 'combined_output.csv'

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 /output
 /Video
 /.venv
-tempCodeRunnerFile.py
+/__pycache__/
+/.pytest_cache__/
+/.ropeproject
+/.vscode
+tempCodeRunnerFile.python
+
