Refactor FaceMeshDetector to improve error handling, integrate ObjectDetector, and enhance frame processing with updated visualization and performance tracking

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 /Video
 /.venv
 /__pycache__/
-/.pytest_cache__/
+/.pytest_cache/
 /.ropeproject
 /.vscode
 tempCodeRunnerFile.python
-
+tempCodeRunnerFile.py
