Refactor FaceMeshDetector and integrate YOLO for object detection
- Updated model path for TFLite model in test_video.py
- Removed inference time tracking from FaceMeshDetector and replaced it with print statements
- Enhanced pupil circularity calculation in FaceMeshDetector
- Created new use_yolo.py file to implement YOLO object detection
- Added functionality to detect and display objects using YOLO
- Implemented XGBoost model training in xgb_train.ipynb and saved model comparison results
- Updated main function to utilize the new XGBoost model

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ tempCodeRunnerFile.py
 /saved_models
 /confusion_matrices
 model_comparison.csv
+model/decision_tree_model.pkl
+model/HYMSyolov11_float32.tflite
+model/knn_model.pkl
+model/random_forest_model.pkl
+model/svm_model.pkl
+model/xgboost_model.pkl
